# Anthropic-Readlist-Tracker

./: .gitignore  AGENTS.md  README.md  anthropic_daemon.service  anthropic_daemon.timer  config.yaml.example  daemon.py  flake.nix  main.py.legacy  pyproject.toml  run_onedrive_test.py  shell.nix  test_daemon.py
src/anthropic_readings/: changes.py  cli.py  config.py  daemon.py  discovery.py  graph.py  logging_setup.py  mailer.py  models.py  orchestrator.py  rendering.py  repository.py
src/anthropic_readings/core/: __init__.py  link_rewrite.py  output_paths.py
tests/: test_cli.py  test_daemon.py  test_graph.py  test_onedrive_daemon.py  test_onedrive_daemon_live.py
