[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anthropic-readings-daemon"
version = "0.1.0"
description = "Daemon that automatically fetches, updates, and renders Anthropic readings to PDF"
requires-python = ">=3.13"
dependencies = [
    "nbconvert>=7.17.1",
    "python-slugify>=8.0.4",
    "pyyaml>=6.0.3",
    "schedule>=1.2.0",
    "msgraph-sdk>=1.0.0",
    "msal>=1.0.0",
]

[project.scripts]
anthropic-readings-daemon = "anthropic_readings.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
